# diesel-stored-procedure

./: Cargo.toml  README.md
migrations/2020-03-22-190712_create_test/: down.sql  up.sql
src/: main.rs
