[package]
name = "diesel-stored-procedure"
version = "0.1.0"
authors = ["Christoffer Lantz <christoffer.lantz@androidbutiken.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
diesel = {version = "1.0.0", features = ["mysql", "chrono"]}
chrono = { version = "0.4" }
